@@ -4,10 +4,10 @@ Links: overview-links.h usage-links.h support-links.h
 <h3>TMDA Results</h3>
 
 Results thus far have been extremely favorable.  Before TMDA my
-mailbox was getting bombarded by 700+ pieces of junk mail per month as
+mailbox was getting bombarded by 900+ pieces of junk mail per month as
 the result of my e-mail address being heavily publicized on USENET and
 various Internet mailing lists.  Now I almost never see a piece of
-SPAM (perhaps 1-3 per month).
+SPAM (perhaps 1 every 4-6 weeks or so).  But don't just take my word for it..
 
 <br><br>
 
