@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov 16 15:29:14 2001 -->
+<!-- Sun Dec  2 19:41:24 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -129,10 +129,10 @@ Author
 <h3>TMDA Results</h3>
 
 Results thus far have been extremely favorable.  Before TMDA my
-mailbox was getting bombarded by 700+ pieces of junk mail per month as
+mailbox was getting bombarded by 900+ pieces of junk mail per month as
 the result of my e-mail address being heavily publicized on USENET and
 various Internet mailing lists.  Now I almost never see a piece of
-SPAM (perhaps 1-3 per month).
+SPAM (perhaps 1 every 4-6 weeks or so).  But don't just take my word for it..
 
 <br><br>
 
